add function.cpp, declare some calculate function in it, try to make main function clear.

--- a/dsoffload/dsoffload.vcxproj
+++ b/dsoffload/dsoffload.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="distribute.cpp" />
+    <ClCompile Include="function.cpp" />
     <ClCompile Include="sim.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
