--- a/dsoffload/dsoffload.vcxproj.filters
+++ b/dsoffload/dsoffload.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="distribute.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="function.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
