--- a/dsoffload/dsoffload.vcxproj.filters
+++ b/dsoffload/dsoffload.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="function.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="packet_arrival.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
