--- a/dsoffload/dsoffload.vcxproj
+++ b/dsoffload/dsoffload.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="define.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="delay-sensitive.cpp" />
     <ClCompile Include="distribute.cpp" />
     <ClCompile Include="function.cpp" />
     <ClCompile Include="packet_arrival.cpp" />
