--- a/dsoffload/dsoffload.vcxproj.filters
+++ b/dsoffload/dsoffload.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClCompile Include="packet_arrival.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="delay-sensitive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
