修正return influence重複計算問題。修改模擬程式

--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,33 @@ ModelManifest.xml
 
 # FAKE - F# Make
 .fake/
+/dsoffload/dso_depth0_UE9000_result_detail.txt
+/dsoffload/dso_depth0_UE9000_result.txt
+/dsoffload/dso_depth0_UE8000_result_detail.txt
+/dsoffload/dso_depth0_UE8000_result.txt
+/dsoffload/dso_depth0_UE7000_result_detail.txt
+/dsoffload/dso_depth0_UE7000_result.txt
+/dsoffload/dso_depth0_UE6000_result_detail.txt
+/dsoffload/dso_depth0_UE6000_result.txt
+/dsoffload/dso_depth0_UE5000_result_detail.txt
+/dsoffload/dso_depth0_UE5000_result.txt
+/dsoffload/dso_depth0_UE4000_result_detail.txt
+/dsoffload/dso_depth0_UE4000_result.txt
+/dsoffload/dso_depth0_UE3000_result_detail.txt
+/dsoffload/dso_depth0_UE3000_result.txt
+/dsoffload/dso_depth0_UE2000_result_detail.txt
+/dsoffload/dso_depth0_UE2000_result.txt
+/dsoffload/dso_depth0_UE15000_result_detail.txt
+/dsoffload/dso_depth0_UE15000_result.txt
+/dsoffload/dso_depth0_UE14000_result_detail.txt
+/dsoffload/dso_depth0_UE14000_result.txt
+/dsoffload/dso_depth0_UE13000_result_detail.txt
+/dsoffload/dso_depth0_UE13000_result.txt
+/dsoffload/dso_depth0_UE12000_result_detail.txt
+/dsoffload/dso_depth0_UE12000_result.txt
+/dsoffload/dso_depth0_UE11000_result_detail.txt
+/dsoffload/dso_depth0_UE11000_result.txt
+/dsoffload/dso_depth0_UE1000_result_detail.txt
+/dsoffload/dso_depth0_UE1000_result.txt
+/dsoffload/dso_depth0_UE10000_result_detail.txt
+/dsoffload/dso_depth0_UE10000_result.txt
