--- a/dsoffload/dsoffload.vcxproj.filters
+++ b/dsoffload/dsoffload.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClCompile Include="result.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="delay-sensitive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="minT.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
